# tailscale-controld-sync

./: .gitignore  CODE_REVIEW.md  README.md  config_example.py  pyproject.toml  tailscale_controld_sync.py
